[project]
name = "eskapackagetest"
version = "0.0.1"
description = "Python packaging test"
authors = [
    {name = "Eskatur", email="conlangtaiwan@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest==8.3.5"
]
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
